# TimeTracker

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  datetime.h  duration.cpp  duration.h  generalworkperiod.h  journalentry.cpp  tests.cpp  timeplanner.cpp  timetracker.h  workday.cpp  workdaycollectionreader.cpp  workdaycollectionreader.h  workdaycollectionwriter.cpp  workdaycollectionwriter.h
src/core/: CMakeLists.txt  datetime.cpp  generalworkperiod.cpp  generalworkperiod.h  journalentry.h  persistor.cpp  persistor.h  tests.cpp  timeplanner.h  timetracker.cpp  timetracker.h  workday.h  workdaycollectionreader.cpp  workdaycollectionreader.h  workdaycollectionwriter.cpp  workdaycollectionwriter.h
src/web/: CMakeLists.txt  actioncontroller.cpp  actioncontroller.h  client.cpp  clientsocket.cpp  clientsocket.h  http.cpp  http.h  pageaddress.cpp  pageaddress.h  pagegenerator.cpp  pagegenerator.h  serve.cpp  test.cpp  webserver.cpp  webserver.h
